--- a/jupyter_notebooks/BD_Azure_Hadoop.ipynb
+++ b/jupyter_notebooks/BD_Azure_Hadoop.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure_logo.png)"
+    "![title](../images/azure_logo.png)"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-cluster.png)"
+    "![title](../images/ambari-cluster.png)"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-dashboard.png)"
+    "![title](../images/ambari-dashboard.png)"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-hive.png)"
+    "![title](../images/ambari-hive.png)"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-showdb.png)"
+    "![title](../images/ambari-showdb.png)"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-createdb.png)"
+    "![title](../images/ambari-createdb.png)"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-showdb1.png)"
+    "![title](../images/ambari-showdb1.png)"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-createtab.png)"
+    "![title](../images/ambari-createtab.png)"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-describe.png)"
+    "![title](../images/ambari-describe.png)"
    ]
   },
   {
@@ -191,9 +191,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-storage1.png)\n",
-    "![title](images/ambari-storage2.png)\n",
-    "![title](images/ambari-storage3.png)"
+    "![title](../images/ambari-storage1.png)\n",
+    "![title](../images/ambari-storage2.png)\n",
+    "![title](../images/ambari-storage3.png)"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-selectall.png)"
+    "![title](../images/ambari-selectall.png)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-selectmax.png)"
+    "![title](../images/ambari-selectmax.png)"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-delete.png)"
+    "![title](../images/ambari-delete.png)"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ambari-error.png)"
+    "![title](../images/ambari-error.png)"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
