--- a/jupyter_notebooks/BD_Azure_Spark.ipynb
+++ b/jupyter_notebooks/BD_Azure_Spark.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure_logo.png)"
+    "![title](../images/azure_logo.png)"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark-cluster.png)"
+    "![title](../images/spark-cluster.png)"
    ]
   },
   {
@@ -93,9 +93,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Spark - Jupyter Notebook Scala](BD_Azure_Spark_JN.ipynb)\n",
+    "[Spark - Jupyter Notebook Scala](../jupyter_notebooks/BD_Azure_Spark_JN.ipynb)\n",
     "\n",
-    "![title](images/spark-jn.png)"
+    "![title](../images/spark-jn.png)"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark-storage.png)"
+    "![title](../images/spark-storage.png)"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
