--- a/jupyter_notebooks/BD_Hadoop_HDFS.ipynb
+++ b/jupyter_notebooks/BD_Hadoop_HDFS.ipynb
@@ -11,21 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apache Hive ™ "
+    "# Apache Hadoop - HDFS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nvidia Jetson Nano"
+    "# Standalone on Nvidia Jetson Nano"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_main.jpg)"
+    "![title](../images/jetson_main.jpg)"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to install and setup Apache Hive on Nvidia Jetson Nano, then check its functionality by creating a table in a database."
+    "The objective of this project is to setup, start and load a file to Apache Hadoop - HDFS on Nvidia Jetson Nano."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "- Nvidia Jetson Nano\n",
-    "- Apache Hive 3.1.x"
+    "- Hadoop"
    ]
   },
   {
@@ -68,83 +68,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Verify Java Installation"
+    "### xml files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "java -version"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install Java"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- sudo apt-get install openjdk-8-jre\n",
-    "- sudo apt-get install openjdk-8-jdk"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Download Apache Hive"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://hive.apache.org"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "/Downloads /Download a release now!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Environment Variables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- HIVE_HOME\n",
-    "- HIVE_CONF_DIR"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- hive-site.xml\n",
-    "- hive-env.sh\n",
-    "- hive-exec-log4j2.properties\n",
-    "- hive-log4j2.properties\n",
-    "- beeline-log4j2.properties "
+    "- core-site.xml\n",
+    "- hdfs-site.xml"
    ]
   },
   {
@@ -158,100 +90,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- /tmp\n",
-    "- /user/hive/warehouse"
+    "- namenode\n",
+    "- datanode"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize to current schema"
+    "### Start HDFS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hive_1.png)\n",
-    "![title](images/hive_2.png)\n"
+    "![title](../images/hadoop_hdfs_start.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hive"
+    "### Java Virtual Machine Process Status Tool"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hive_3.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Database"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "List databases"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hive_4.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a database"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hive_5.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Utilize a database"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hive_6.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hive_7.png)"
+    "![title](../images/hadoop_hdfs_jps.png)"
    ]
   },
   {
@@ -265,7 +133,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hive_8.png)"
+    "![title](../images/hadoop_hdfs_w1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hadoop_hdfs_w2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List current files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hadoop_hdfs_f1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a data directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hadoop_hdfs_f2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hadoop_hdfs_f3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List current files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hadoop_hdfs_f4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hadoop_hdfs_w3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is important to note that there is just one block information because the file is very small, however larger files will generate more blocks, 128 MB each one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hadoop_hdfs_w4.png)"
    ]
   },
   {
@@ -292,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
