--- a/jupyter_notebooks/BD_Hadoop_Yarn.ipynb
+++ b/jupyter_notebooks/BD_Hadoop_Yarn.ipynb
@@ -4,28 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SAP"
+    "# Big Data "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SAP HANA, express edition"
+    "# Apache Hadoop - YARN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Microsoft Azure"
+    "# Standalone on Nvidia Jetson Nano"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure_logo.png)"
+    "![title](../images/jetson_main.jpg)"
    ]
   },
   {
@@ -39,9 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to find the highest temperature in a dataset using SAP HANA, express edition on Microsoft Azure. \n",
-    "\n",
-    "The dataset is the result of the project  [Data Science - Create and analyze your own dataset](DS_Dataset_Step1.ipynb)"
+    "The objective of this project is to setup and start Apache Hadoop - YARN on Nvidia Jetson Nano."
    ]
   },
   {
@@ -55,8 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Microsoft Azure (Free trial or Pay-as-you-go)\n",
-    "- Data File"
+    "- Nvidia Jetson Nano\n",
+    "- Hadoop"
    ]
   },
   {
@@ -70,86 +68,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Database"
+    "### xml files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h2-adddb.png)"
+    "- mapred-site.xml\n",
+    "- yarn-site.xml"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Create a Schema"
+    "### Start HDFS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h2-schema1.png)\n",
-    "![title](images/azure-h2-schema2.png)"
+    "![title](../images/hadoop_yarn_start1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option A\n",
-    "### Create Table"
+    "### Start YARN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h2-tab1.png)\n",
-    "![title](images/azure-h2-tab2.png)\n",
-    "![title](images/azure-h2-tab3.png)"
+    "![title](../images/hadoop_yarn_start2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option B\n",
-    "### Automatically Create a Table Using Import Option"
+    "### Java Virtual Machine Process Status Tool"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h2-import1.png)\n",
-    "![title](images/azure-h2-import2.png)\n",
-    "![title](images/azure-h2-import3.png)\n",
-    "![title](images/azure-h2-import4.png)"
+    "![title](../images/hadoop_yarn_start3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select the highest temperature of the dataset"
+    "### Web"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h2-max.png)"
+    "![title](../images/hadoop_yarn_web.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -168,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
