--- a/jupyter_notebooks/BD_Hive.ipynb
+++ b/jupyter_notebooks/BD_Hive.ipynb
@@ -4,28 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SELF-DRIVING CAR"
+    "# Big Data "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computer Vision"
+    "# Apache Hive ™ "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OpenCV"
+    "# Nvidia Jetson Nano"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_main.jpg)"
+    "![title](../images/jetson_main.jpg)"
    ]
   },
   {
@@ -39,13 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to design and build a self-driving car. \n",
-    "\n",
-    "The base of the project is image processing and OpenCV, through image processing the car will determine the route (drive, right and left). Basically, the image processing resides in capture an image from a Raspberry camera and set the position of the car in relation to the edges or lanes.\n",
-    "\n",
-    "Image processing is developed through the Raspberry Pi, once the position is determined the Raspberry Pi sends it to the Arduino in order to set the route.\n",
-    "\n",
-    "The 4wd car as a self-driving car is made of a master device (Raspberry Pi 3 Model B) and a slave device (Arduino Uno), the images are captured from the Raspberry Camera V2.1 and the DC motor is controlled through the TB6612FNG.\n"
+    "The objective of this project is to install and setup Apache Hive on Nvidia Jetson Nano, then check its functionality by creating a table in a database."
    ]
   },
   {
@@ -59,32 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hardware Components:\n",
-    "- 4wd Car\n",
-    "- Raspberry Pi 3 Model B\n",
-    "- Arduino Uno\n",
-    "- Raspberry Camera V2.1\n",
-    "- Motor Driver TB6612FNG\n",
-    "- Dual-USB Portable Power Bank\n",
-    "- Dupont wires"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Software:\n",
-    "- OpenCV\n",
-    "- Geany C++"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Others:\n",
-    "- Black foam\n",
-    "- White cord"
+    "- Nvidia Jetson Nano\n",
+    "- Apache Hive 3.1.x"
    ]
   },
   {
@@ -98,120 +68,212 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4wd car "
+    "### Verify Java Installation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Version A"
+    "java -version"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_lateral.jpg)"
+    "### Install Java"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Version B"
+    "- sudo apt-get install openjdk-8-jre\n",
+    "- sudo apt-get install openjdk-8-jdk"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_lateral1.jpg)"
+    "### Download Apache Hive"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Track"
+    "https://hive.apache.org"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Straight Track"
+    "/Downloads /Download a release now!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_track_s.jpg)"
+    "### Environment Variables"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curved Track"
+    "- HIVE_HOME\n",
+    "- HIVE_CONF_DIR"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_track_c.jpg)"
+    "### Files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result"
+    "- hive-site.xml\n",
+    "- hive-env.sh\n",
+    "- hive-exec-log4j2.properties\n",
+    "- hive-log4j2.properties\n",
+    "- beeline-log4j2.properties "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Straight Track"
+    "### Directories"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](videos/cv_self_driving_car.mp4)"
+    "- /tmp\n",
+    "- /user/hive/warehouse"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_video.png)"
+    "### Initialize to current schema"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curved Track"
+    "![title](../images/hive_1.png)\n",
+    "![title](../images/hive_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](videos/cv_self_driving_car1.mp4)"
+    "### Hive"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_video1.png)"
+    "![title](../images/hive_3.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List databases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hive_4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hive_5.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilize a database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hive_6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hive_7.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Web"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/hive_8.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -230,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
