--- a/jupyter_notebooks/CV_Self_Driving_Car.ipynb
+++ b/jupyter_notebooks/CV_Self_Driving_Car.ipynb
@@ -4,28 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Big Data "
+    "# SELF-DRIVING CAR"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apache Hadoop - HDFS"
+    "# Computer Vision"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standalone on Nvidia Jetson Nano"
+    "# OpenCV"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_main.jpg)"
+    "![title](../images/cv_car_main.jpg)"
    ]
   },
   {
@@ -39,7 +39,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to setup, start and load a file to Apache Hadoop - HDFS on Nvidia Jetson Nano."
+    "The objective of this project is to design and build a self-driving car. \n",
+    "\n",
+    "The base of the project is image processing and OpenCV, through image processing the car will determine the route (drive, right and left). Basically, the image processing resides in capture an image from a Raspberry camera and set the position of the car in relation to the edges or lanes.\n",
+    "\n",
+    "Image processing is developed through the Raspberry Pi, once the position is determined the Raspberry Pi sends it to the Arduino in order to set the route.\n",
+    "\n",
+    "The 4wd car as a self-driving car is made of a master device (Raspberry Pi 3 Model B) and a slave device (Arduino Uno), the images are captured from the Raspberry Camera V2.1 and the DC motor is controlled through the TB6612FNG.\n"
    ]
   },
   {
@@ -53,8 +59,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Nvidia Jetson Nano\n",
-    "- Hadoop"
+    "Hardware Components:\n",
+    "- 4wd Car\n",
+    "- Raspberry Pi 3 Model B\n",
+    "- Arduino Uno\n",
+    "- Raspberry Camera V2.1\n",
+    "- Motor Driver TB6612FNG\n",
+    "- Dual-USB Portable Power Bank\n",
+    "- Dupont wires"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Software:\n",
+    "- OpenCV\n",
+    "- Geany C++"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Others:\n",
+    "- Black foam\n",
+    "- White cord"
    ]
   },
   {
@@ -68,171 +98,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### xml files"
+    "### 4wd car "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- core-site.xml\n",
-    "- hdfs-site.xml"
+    "### Version A"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Directories"
+    "![title](../images/cv_car_lateral.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- namenode\n",
-    "- datanode"
+    "### Version B"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start HDFS"
+    "![title](../images/cv_car_lateral1.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_hdfs_start.png)"
+    "### Track"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Java Virtual Machine Process Status Tool"
+    "### Straight Track"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_hdfs_jps.png)"
+    "![title](../images/cv_car_track_s.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Web"
+    "### Curved Track"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_hdfs_w1.png)"
+    "![title](../images/cv_car_track_c.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_hdfs_w2.png)"
+    "## Result"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load a file"
+    "### Straight Track"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List current files"
+    "[Please watch the video!](videos/cv_self_driving_car.mp4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_hdfs_f1.png)"
+    "![title](../images/cv_car_video.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a data directory"
+    "### Curved Track"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_hdfs_f2.png)"
+    "[Please watch the video!](videos/cv_self_driving_car1.mp4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load a file"
+    "![title](../images/cv_car_video1.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hadoop_hdfs_f3.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "List current files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hadoop_hdfs_f4.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hadoop_hdfs_w3.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is important to note that there is just one block information because the file is very small, however larger files will generate more blocks, 128 MB each one."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/hadoop_hdfs_w4.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -251,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
