--- a/jupyter_notebooks/DL_Image_Classification.ipynb
+++ b/jupyter_notebooks/DL_Image_Classification.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/dl_main.png)"
+    "![title](../images/dl_main.png)"
    ]
   },
   {
@@ -95,14 +95,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/dl_front.jpg)"
+    "![title](../images/dl_front.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/dl_lateral.jpg)"
+    "![title](../images/dl_lateral.jpg)"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/dl_red_ball.jpg)"
+    "![title](../images/dl_red_ball.jpg)"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/dl_bmw_car.jpg)"
+    "![title](../images/dl_bmw_car.jpg)"
    ]
   },
   {
@@ -172,14 +172,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](./videos/dl_on_red_ball.mp4)"
+    "[Please watch the video!](../videos/dl_on_red_ball.mp4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/dl_red_ball_video.png)"
+    "![title](../images/dl_red_ball_video.png)"
    ]
   },
   {
@@ -193,14 +193,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](videos/dl_on_bmw_car.mp4)"
+    "[Please watch the video!](../videos/dl_on_bmw_car.mp4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/dl_bmw_car_video.png)"
+    "![title](../images/dl_bmw_car_video.png)"
    ]
   }
  ],
@@ -220,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
