--- a/jupyter_notebooks/Nvidia_Jetson_Nano_GPIO.ipynb
+++ b/jupyter_notebooks/Nvidia_Jetson_Nano_GPIO.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_main.jpg)"
+    "![title](../images/jetson_main.jpg)"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_on.jpg)"
+    "![title](../images/jetson_on.jpg)"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_off.jpg)"
+    "![title](../images/jetson_off.jpg)"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
