--- a/jupyter_notebooks/ROS_RC_Car.ipynb
+++ b/jupyter_notebooks/ROS_RC_Car.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_main.jpg)"
+    "![title](../images/ros_main.jpg)"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_dev.jpg)"
+    "![title](../images/ros_dev.jpg)"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_i2_error.png)"
+    "![title](../images/ros_i2_error.png)"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_roscore.png)"
+    "![title](../images/ros_roscore.png)"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_rosrun.png)"
+    "![title](../images/ros_rosrun.png)"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_rostopic_list.png)"
+    "![title](../images/ros_rostopic_list.png)"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_rostopic1.png)"
+    "![title](../images/ros_rostopic1.png)"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/ros_rostopic2.png)"
+    "![title](../images/ros_rostopic2.png)"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
