--- a/jupyter_notebooks/SAP_Hana_Azure_A.ipynb
+++ b/jupyter_notebooks/SAP_Hana_Azure_A.ipynb
@@ -4,28 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SELF-DRIVING CAR"
+    "# SAP"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computer Vision, Keras & Tensorflow"
+    "# SAP HANA, express edition"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Donkey Car Project"
+    "# Microsoft Azure"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkeycar_main.jpg)"
+    "![title](../images/azure_logo.png)"
    ]
   },
   {
@@ -39,13 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to build a self-driving car based on the Donkey Car project. \n",
+    "The objective of this project is to deploy SAP HANA, express edition on Microsoft Azure. \n",
     "\n",
-    "Donkey is an open source self-driving platform written in Python.\n",
-    "\n",
-    "The project has some main steps that are described on the official web site, however the whole project is based on hardware, software and training a model. \n",
-    "\n",
-    "Reference: https://www.donkeycar.com \n"
+    "The dataset is the result of the project  [Data Science - Create and analyze your own dataset](../jupyter_notebooks/DS_Dataset_Step1.ipynb)"
    ]
   },
   {
@@ -59,33 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hardware Components:\n",
-    "- RC Car. Latrax Desert Prerunner powered by Traxxas\n",
-    "- Nvidia Jetson Nano \n",
-    "- Servo Driver PCA 9685\n",
-    "- Wide Angle Raspberry Pi Camera\n",
-    "- Flex cable for Raspberry Pi Camera, about 25 cm\n",
-    "- Bluetooth 4.0 USB Dongle \n",
-    "- Joystick - Sony PS4 Dualshock\n",
-    "- Dual-USB Portable Power Bank\n",
-    "- Dupont wires"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Software:\n",
-    "- Software on Donkey Car\n",
-    "- Software on host PC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Others:\n",
-    "- Track (White cord)"
+    "- Microsoft Azure (Free trial or Pay-as-you-go)"
    ]
   },
   {
@@ -99,78 +69,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkeycar_dev1.jpg)"
+    "###  Create a Virtual Machine"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkeycar_dev2.jpg)"
+    "![title](../images/azure-h1-vm.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkeycar_dev3.jpg)"
+    "### SSH Connection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "![title](../images/azure-h1-keys.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bluetooth Joystick - Sony PS4 Dualshock"
+    "### Setup the system"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkeycar_joystick.jpg)"
+    "![title](../images/azure-h1-setup1.png)\n",
+    "![title](../images/azure-h1-setup2.png)\n",
+    "![title](../images/azure-h1-setup3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkey_train1.png)"
+    "### Check on the status of the running applications"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkey_train2.jpg)"
+    "![title](../images/azure-h1-apps1.png)\n",
+    "![title](../images/azure-h1-apps2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkey_train3.png)"
+    "### Setup host database"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/donkey_train4.png)"
+    "![title](../images/azure-h1-hosts.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's drive"
+    "### Administration Cockpit\n",
+    "\n",
+    "https://hxehost/51036"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/azure-h1-51036.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAP Web IDE\n",
+    "\n",
+    "https://hxehost/53075"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/azure-h1-53075_0.png)\n",
+    "\n",
+    "### Development\n",
+    "![title](../images/azure-h1-53075_1.png)\n",
+    "\n",
+    "### DB Explorer\n",
+    "![title](../images/azure-h1-53075_2.png)\n",
+    "\n",
+    "### Preferences\n",
+    "![title](../images/azure-h1-53075_3.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -189,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
