--- a/jupyter_notebooks/SAP_Hana_Azure_B.ipynb
+++ b/jupyter_notebooks/SAP_Hana_Azure_B.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure_logo.png)"
+    "![title](../images/azure_logo.png)"
    ]
   },
   {
@@ -39,9 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to deploy SAP HANA, express edition on Microsoft Azure. \n",
+    "The objective of this project is to find the highest temperature in a dataset using SAP HANA, express edition on Microsoft Azure. \n",
     "\n",
-    "The dataset is the result of the project  [Data Science - Create and analyze your own dataset](DS_Dataset_Step1.ipynb)"
+    "The dataset is the result of the project  [Data Science - Create and analyze your own dataset](../jupyter_notebooks/DS_Dataset_Step1.ipynb)"
    ]
   },
   {
@@ -55,7 +55,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Microsoft Azure (Free trial or Pay-as-you-go)"
+    "- Microsoft Azure (Free trial or Pay-as-you-go)\n",
+    "- Data File"
    ]
   },
   {
@@ -69,111 +70,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Create a Virtual Machine"
+    "###  Database"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h1-vm.png)"
+    "![title](../images/azure-h2-adddb.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SSH Connection"
+    "###  Create a Schema"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h1-keys.png)"
+    "![title](../images/azure-h2-schema1.png)\n",
+    "![title](../images/azure-h2-schema2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup the system"
+    "### Option A\n",
+    "### Create Table"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h1-setup1.png)\n",
-    "![title](images/azure-h1-setup2.png)\n",
-    "![title](images/azure-h1-setup3.png)"
+    "![title](../images/azure-h2-tab1.png)\n",
+    "![title](../images/azure-h2-tab2.png)\n",
+    "![title](../images/azure-h2-tab3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check on the status of the running applications"
+    "### Option B\n",
+    "### Automatically Create a Table Using Import Option"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h1-apps1.png)\n",
-    "![title](images/azure-h1-apps2.png)"
+    "![title](../images/azure-h2-import1.png)\n",
+    "![title](../images/azure-h2-import2.png)\n",
+    "![title](../images/azure-h2-import3.png)\n",
+    "![title](../images/azure-h2-import4.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup host database"
+    "### Select the highest temperature of the dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/azure-h1-hosts.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Administration Cockpit\n",
-    "\n",
-    "https://hxehost/51036"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/azure-h1-51036.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SAP Web IDE\n",
-    "\n",
-    "https://hxehost/53075"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/azure-h1-53075_0.png)\n",
-    "Development\n",
-    "![title](images/azure-h1-53075_1.png)\n",
-    "DB Explorer\n",
-    "![title](images/azure-h1-53075_2.png)\n",
-    "Preferences\n",
-    "![title](images/azure-h1-53075_3.png)"
+    "![title](../images/azure-h2-max.png)"
    ]
   },
   {
@@ -200,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
