--- a/jupyter_notebooks/Donkey_Car_Project.ipynb
+++ b/jupyter_notebooks/Donkey_Car_Project.ipynb
@@ -4,28 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Big Data "
+    "# SELF-DRIVING CAR"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apache Hadoop - YARN"
+    "# Computer Vision, Keras & Tensorflow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standalone on Nvidia Jetson Nano"
+    "# Donkey Car Project"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_main.jpg)"
+    "![title](../images/donkeycar_main.jpg)"
    ]
   },
   {
@@ -39,7 +39,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to setup and start Apache Hadoop - YARN on Nvidia Jetson Nano."
+    "The objective of this project is to build a self-driving car based on the Donkey Car project. \n",
+    "\n",
+    "Donkey is an open source self-driving platform written in Python.\n",
+    "\n",
+    "The project has some main steps that are described on the official web site, however the whole project is based on hardware, software and training a model. \n",
+    "\n",
+    "Reference: https://www.donkeycar.com \n"
    ]
   },
   {
@@ -53,8 +59,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Nvidia Jetson Nano\n",
-    "- Hadoop"
+    "Hardware Components:\n",
+    "- RC Car. Latrax Desert Prerunner powered by Traxxas\n",
+    "- Nvidia Jetson Nano \n",
+    "- Servo Driver PCA 9685\n",
+    "- Wide Angle Raspberry Pi Camera\n",
+    "- Flex cable for Raspberry Pi Camera, about 25 cm\n",
+    "- Bluetooth 4.0 USB Dongle \n",
+    "- Joystick - Sony PS4 Dualshock\n",
+    "- Dual-USB Portable Power Bank\n",
+    "- Dupont wires"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Software:\n",
+    "- Software on Donkey Car\n",
+    "- Software on host PC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Others:\n",
+    "- Track (White cord)"
    ]
   },
   {
@@ -68,71 +99,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### xml files"
+    "![title](../images/donkeycar_dev1.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- mapred-site.xml\n",
-    "- yarn-site.xml"
+    "![title](../images/donkeycar_dev2.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start HDFS"
+    "![title](../images/donkeycar_dev3.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_yarn_start1.png)"
+    "## Training"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start YARN"
+    "### Bluetooth Joystick - Sony PS4 Dualshock"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_yarn_start2.png)"
+    "![title](../images/donkeycar_joystick.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Java Virtual Machine Process Status Tool"
+    "![title](../images/donkey_train1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_yarn_start3.png)"
+    "![title](../images/donkey_train2.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Web"
+    "![title](../images/donkey_train3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_yarn_web.png)"
+    "![title](../images/donkey_train4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's drive"
    ]
   }
  ],
@@ -152,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
