--- a/jupyter_notebooks/SAP_HCP_Sensor_Step1.ipynb
+++ b/jupyter_notebooks/SAP_HCP_Sensor_Step1.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step1_1.png)"
+    "![title](../images/SAP_Step1_1.png)"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step1_2.png)"
+    "![title](../images/SAP_Step1_2.png)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "- Device Management > All Message Types\n",
     "\n",
-    "![title](images/SAP_Step1_3.png)"
+    "![title](../images/SAP_Step1_3.png)"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step1_4.png)"
+    "![title](../images/SAP_Step1_4.png)"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step1_5.png)"
+    "![title](../images/SAP_Step1_5.png)"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step1_6.png)"
+    "![title](../images/SAP_Step1_6.png)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
