--- a/jupyter_notebooks/SAP_HCP_Sensor_Step2.ipynb
+++ b/jupyter_notebooks/SAP_HCP_Sensor_Step2.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step2_1.png)"
+    "![title](../images/SAP_Step2_1.png)"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step2_2.png)"
+    "![title](../images/SAP_Step2_2.png)"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step2_3.png)"
+    "![title](../images/SAP_Step2_3.png)"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/SAP_Step2_4.png)"
+    "![title](../images/SAP_Step2_4.png)"
    ]
   },
   {
@@ -261,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
